sfdx-source/main/default/objects/VCC_Workstream_Setting_Sort_Config__mdt/VCC_Workstream_Setting_Sort_Config__mdt.object-meta.xml
<CustomObject>
    <description>Each record in this table configures on-load sorting behavior for an HDR datatable LWC, for a given persona.
The HDR datatable is indicated by the HDR Data Type field.
The persona is indicated by the lookup field to the VCC Workstream Setting object.</description>
    <label>VCC Workstream Setting Sort Config</label>
    <pluralLabel>VCC Workstream Setting Sort Configs</pluralLabel>
</CustomObject>