sfdx-source/main/default/objects/VCC_Workstream_Setting_Sort_Config__mdt/fields/VCC_HDR_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>VCC_HDR_Data_Type__c</fullName>
    <description>Indicates the HDR data type and table that will be sorted</description>
    <inlineHelpText>Indicates the HDR data type and table that will be sorted</inlineHelpText>
    <label>HDR Data Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergies</fullName>
            </value>
            <value>
                <fullName>Appointments</fullName>
            </value>
            <value>
                <fullName>Consults</fullName>
            </value>
            <value>
                <fullName>Directives</fullName>
            </value>
            <value>
                <fullName>Discharge Summary</fullName>
            </value>
            <value>
                <fullName>EHR Progress Note</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Imaging</fullName>
            </value>
            <value>
                <fullName>Immunizations</fullName>
            </value>
            <value>
                <fullName>Labs</fullName>
            </value>
            <value>
                <fullName>Medications</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
            <value>
                <fullName>Problems</fullName>
            </value>
            <value>
                <fullName>Visits</fullName>
            </value>
            <value>
                <fullName>Vitals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>