sfdx-source/main/default/objects/VCC_Workstream_Setting_Sort_Config__mdt/fields/VCC_Sort_By__c.field-meta.xml
<CustomField>
    <fullName>VCC_Sort_By__c</fullName>
    <description>The name of a property in the HDR data by which to sort. Value and capitalization should exactly match the &apos;fieldName&apos; of a column in the datatable.</description>
    <inlineHelpText>The name of a property in the HDR data by which to sort. Value and capitalization should exactly match the &apos;fieldName&apos; of a column in the datatable.</inlineHelpText>
    <label>Sort By</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>