sfdx-source/main/default/objects/VCC_Workstream_Setting_Sort_Config__mdt/fields/VCC_Workstream_Setting__c.field-meta.xml
<CustomField>
    <fullName>VCC_Workstream_Setting__c</fullName>
    <description>Identifies the VCC Workstream Setting (i.e. a persona) for which this Sort Config is applied.</description>
    <inlineHelpText>Identifies the VCC Workstream Setting (i.e. a persona) for which this Sort Config is applied.</inlineHelpText>
    <label>VCC Workstream Setting</label>
    <referenceTo>VCC_Workstream_Settings__mdt</referenceTo>
    <relationshipLabel>VCC Workstream Setting Sort Configs</relationshipLabel>
    <relationshipName>VCC_Workstream_Setting_Sort_Configs</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>