sfdx-source/main/default/objects/VCC_Workstream_Setting_Sort_Config__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>VCC_Workstream_Setting__c</columns>
    <columns>VCC_HDR_Data_Type__c</columns>
    <columns>VCC_Sort_By__c</columns>
    <columns>VCC_Sort_Direction__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
    <language>en_US</language>
</ListView>